# ifinance-fastapi

./: .env.example  .gitignore  Dockerfile  azure-pipeline-dev.yaml  pyproject.toml
app/: main.py
app/src/base/: crud.py  object.py  schema.py
app/src/core/: config.py
app/src/database/: __init__.py  engine.py  session.py
app/src/database/models/: __init__.py  agreement_overdue.py  ai_analysis.py  category.py  family.py  member.py  transaction.py  user.py
app/src/database/models/mixins/: audit_fields.py
app/src/exception/: auth.py  custom.py
app/src/exception/handler/: context.py  http_error.py  validation_error.py
app/src/router/: api.py  response.py  security.py
app/src/router/ai/: api.py  crud.py  object.py  schema.py
app/src/router/category/: api.py  crud.py  object.py  schema.py
app/src/router/customer/: api.py  crud.py  object.py  schema.py
app/src/router/download/: api.py  crud.py  object.py  schema.py
app/src/router/family/: api.py  object.py  schema.py
app/src/router/receipt/: api.py  crud.py  object.py  schema.py
app/src/router/report/: api.py  crud.py  object.py  schema.py
app/src/router/root/: api.py
app/src/router/transaction/: api.py  crud.py  object.py  schema.py
app/src/router/user/: api.py  crud.py  object.py  schema.py  security.py
app/src/services/organization_service/: http.py
app/src/utils/: access_token_generator.py  file_generator.py  httpx_client.py  response_builder.py
migrations/: env.py
